--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -5,6 +5,11 @@ drupalphp53devweb:
     - "445:443"
   links:
    - drupalphp53devdb:database
+  volumes:
+    - ~/.ssh:/home/ubuntu/.ssh
+    - ~/.composer:/home/ubuntu/.composer
+    - ~/.npm:/home/ubuntu/.npm
+    - ~/.npm-packages:/home/ubuntu/.npm-packages
 drupalphp53devdb:
   image: mysql:5.5
   volumes_from:
